# hikiwiki

./: .gitignore  Compile.hs  HikiWiki.hs  Main.hs  README.md  Repo.hs  TODO  TODO.md  Wiki.hs  Yaml.hs  clean.sh  hikiwiki.1  hikiwiki.cabal  make.sh  post-update.hs
Compile/: Internal.hs
etc/setup/auto-blog/: index.mdwn
etc/setup/auto-blog/posts/: first_post.mdwn
etc/themes/cayman/: cayman-eg.html  cayman.tpl  post.html  post.mdwn  pre.mdwn
etc/themes/cayman/stylesheets/: stylesheet.css
etc/themes/caymandark/: pre.mdwn
etc/themes/caymandark/stylesheets/: stylesheet.css
test/: Main  Main.hs  QuickCheckTests.hs
