name:                hikiwiki
version:             0.1.0.0
synopsis:            A static markdown site compiler built with git and pandoc.
homepage:            git.diskfish.org
license:             GPL-3
license-file:        LICENSE
author:              Scott Wakeling
maintainer:          scott@diskfish.org
copyright:           (c) Scott Wakeling 2015-2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable HikiWiki
    main-is: Main.hs

    --other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:    
    
    -- Other library packages from which modules are imported.
    build-depends:      base >=4.7,
                        process >=1.2,
                        directory >=1.2 && <1.3,
                        MissingH >=1.3 && <1.4,
                        regex-posix >=0.95 && <0.96,
                        filepath >=1.3 && <1.4
  
    -- Directories containing source files.
    -- hs-source-dirs:

    -- Base language which the package is written in.
    default-language:    Haskell2010

Test-Suite testsuite-basic
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test, .
    build-depends:      base >=4.7,
                        test-framework,
                        test-framework-hunit,
                        HUnit,
                        filepath >=1.3 && <1.4,
                        regex-posix >=0.95 && <0.96,
                        directory >=1.2 && <1.3,
                        containers == 0.5.*,
                        MissingH >=1.3 && <1.4,
                        process >=1.2

